--- a/manifests/kustomize/base/metadata/base/kustomization.yaml
+++ b/manifests/kustomize/base/metadata/base/kustomization.yaml
@@ -8,5 +8,7 @@ resources:
   - metadata-envoy-service.yaml
   - metadata-grpc-sa.yaml
 images:
-  - name: gcr.io/ml-pipeline/metadata-envoy
-    newTag: 1.6.0
+#  - name: gcr.io/ml-pipeline/metadata-envoy
+  - name: kubeflow-metadata-envoy-ppc64le	
+#    newTag: 1.6.0
+    newTag: 1.5.0
