--- a/manifests/kustomize/base/metadata/base/metadata-grpc-deployment.yaml
+++ b/manifests/kustomize/base/metadata/base/metadata-grpc-deployment.yaml
@@ -22,7 +22,8 @@ spec:
         # * .cloudbuild.yaml and .release.cloudbuild.yaml
         # * manifests/kustomize/base/metadata/base/metadata-grpc-deployment.yaml
         # * test/tag_for_hosted.sh
-        image: gcr.io/tfx-oss-public/ml_metadata_store_server:0.30.0
+       # image: gcr.io/tfx-oss-public/ml_metadata_store_server:0.30.0
+	image: quay.io/ibm/kubeflow-ml_metadata_store_server-ppc64le:0.25.1
         env:
         - name: DBCONFIG_USER
           valueFrom:
