--- a/manifests/kustomize/base/pipeline/ml-pipeline-apiserver-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-apiserver-deployment.yaml
@@ -73,7 +73,8 @@ spec:
             secretKeyRef:
               name: mlpipeline-minio-artifact
               key: secretkey
-        image: gcr.io/ml-pipeline/api-server:dummy
+#        image: gcr.io/ml-pipeline/api-server:dummy
+        image: quay.io/ibm/kubeflow-api-server-ppc64le:1.5.0
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-api-server
         ports:
