--- a/manifests/kustomize/base/pipeline/ml-pipeline-persistenceagent-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-persistenceagent-deployment.yaml
@@ -25,7 +25,8 @@ spec:
             value: "86400"
           - name: NUM_WORKERS
             value: "2"
-        image: gcr.io/ml-pipeline/persistenceagent:dummy
+#        image: gcr.io/ml-pipeline/persistenceagent:dummy
+	image: quay.io/ibm/kubeflow-persistenceagent-ppc64le:1.5.0
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-persistenceagent
         resources:
