--- a/manifests/kustomize/base/pipeline/ml-pipeline-viewer-crd-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-viewer-crd-deployment.yaml
@@ -16,7 +16,8 @@ spec:
         cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
     spec:
       containers:
-      - image: gcr.io/ml-pipeline/viewer-crd-controller:dummy
+#      - image: gcr.io/ml-pipeline/viewer-crd-controller:dummy
+      - image: quay.io/ibm/kubeflow-viewer-crd-controller-ppc64le:1.5.0
         imagePullPolicy: Always
         name: ml-pipeline-viewer-crd
         env:
